dev: cli 修正与测试

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "et-js-boilerplate",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "bin": "./bin/cli.js",
   "description": "my js proj boilerplate",
   "main": " ",
   "scripts": {
@@ -28,6 +29,9 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
+    "commander": "^2.11.0",
+    "eslint": "^4.2.0",
+    "eslint-loader": "^1.9.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-sass": "^3.1.0",
@@ -35,8 +39,5 @@
     "gulp-util": "^3.0.8",
     "webpack": "^3.3.0"
   },
-  "dependencies": {
-    "eslint": "^4.2.0",
-    "eslint-loader": "^1.9.0"
-  }
+  "dependencies": {}
 }
