--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "et-js-boilerplate",
   "version": "0.0.2",
   "bin": "./bin/cli.js",
-  "description": "my js proj boilerplate",
-  "main": " ",
+  "description": "mine js proj boilerplate",
+  "main": "",
   "scripts": {
     "prebuild": "./scripts/clean.sh && ./scripts/link.sh && ./scripts/copylib.sh",
     "build": "gulp",
@@ -29,9 +29,12 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
+    "chalk": "^2.0.1",
     "commander": "^2.11.0",
+    "cross-spawn": "^5.1.0",
     "eslint": "^4.2.0",
     "eslint-loader": "^1.9.0",
+    "fs-extra": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-sass": "^3.1.0",
