--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "prebuild": "./scripts/clean.sh && ./scripts/link.sh && ./scripts/copylib.sh",
     "build": "gulp",
-    "dev": "webpack --watch"
+    "dev": "webpack-dev-server --open --progress --colors",
+    "start": "webpack-dev-server --open --progress --colors"
   },
   "repository": {
     "type": "git",
@@ -40,7 +41,9 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-util": "^3.0.8",
-    "webpack": "^3.3.0"
+    "html-webpack-plugin": "^2.30.1",
+    "webpack": "^3.3.0",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {}
 }
