--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^4.2.0",
     "eslint-loader": "^1.9.0",
     "fs-extra": "^4.0.0",
+    "glob": "^7.1.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-sass": "^3.1.0",
