--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chalk": "^2.0.1",
     "commander": "^2.11.0",
     "cross-spawn": "^5.1.0",
+    "css-loader": "^0.28.5",
     "eslint": "^4.2.0",
     "eslint-loader": "^1.9.0",
     "fs-extra": "^4.0.0",
@@ -43,6 +44,9 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-util": "^3.0.8",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.7.1"
   },
